added ability to hide cold edges in visualizer

--- a/visualizer/hotspots/hotspots.html
+++ b/visualizer/hotspots/hotspots.html
@@ -29,6 +29,13 @@
     </p>
 
     <p>
+    <label>
+      <input id="cb_cold_edges" type="checkbox" />
+      Show cold edges
+    </label>
+    </p>
+
+    <p>
     Legends:
     <ul>
       <li>Nodes: functions called in a program (including builtins). 
